# musicxml

./: .gitignore  Cargo.toml  build.rs
.zed/: tasks.json
src/: attributes.rs  beam.rs  direction.rs  display_music_xml.rs  font.rs  harmony.rs  layout.rs  lib.rs  main.rs  measure.rs  music.rs  music_xml.rs  parse.rs  parse_music_xml.rs  sheet.rs  staff.rs  view.wgsl  xml.rs
src/xml/: content.rs  mod.rs  seq.rs  serde.rs
