package={name='music', version='0.0.0', edition='2021'}

[dependencies]
fehler='*'
roxmltree='*'
itertools='*'
derive-more={package='derive_more', version='*'}
num={git='https://github.com/Matthias-Fauconneau/num'}
vector={git='https://github.com/Matthias-Fauconneau/vector'}
ui={git='https://github.com/Matthias-Fauconneau/ui', features = ['text','graphic']}

[patch.'https://github.com/Matthias-Fauconneau/vector']
vector={path='../vector'}
[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={path='../ui'}
