cargo-features=['edition2024']
package={name='music', version='0.0.0', edition='2024'}

[dependencies]
roxmltree='*'
itertools='*'
derive-more={package='derive_more', version='*', features=['from_str','deref_mut']}
num={git='https://github.com/Matthias-Fauconneau/num'}
vector={git='https://github.com/Matthias-Fauconneau/vector'}
ui={git='https://github.com/Matthias-Fauconneau/ui'}

[patch.'https://github.com/Matthias-Fauconneau/ui']
ui={path='../ui'}
